# cstatats

./: .eslintignore  .eslintrc  .gitignore  Dockerfile  README.md  admin.js  babel.config.js  docker-compose.yml  jsconfig.json  package-lock.json  package.json  webpack.config.js
.circleci/: config.yml
.github/workflows/: main.yml
certificates/en/: index.html
certificates/fi/: index.html
client/: index.js
client/components/: AdminExamExceptionView.js  AdminExamView.js  App.js  AppRouter.js  Course.js  CourseAdminPasteView.js  CourseRouter.js  Courses.js  Crediting.js  ErrorBoundary.js  GithubTokenConsumer.js  Instructor.js  Login.js  Miniproject.js  NavBar.js  Notification.js  PeerReview.js  SideBar.js  Solutions.js  Statistics.js  SubmissionForm.js  Submissions.js  Suotar.js
client/hooks/: useLocalStorage.js
client/services/: admin.js  course.js  exam.js  project.js  quiz.js  student.js  user.js
client/util/: apiConnection.js  common.js  (+6 more)
config/: common.js  courseConfig.js  courseConfigUtils.js  dev.Dockerfile  gradingHelpers.js  mongo-init.js
merge_machine/: index.js  package-lock.json  package.json  testing.js
server/: index.js
server/assets/solutions/ohtu2022/part2/python/poetry-web/: pyproject.toml
server/assets/solutions/ohtu2023/part3/web-login/: pyproject.toml
server/assets/solutions/ohtu2023/part3/web-login/src/: AppLibrary.py  index.py
server/assets/solutions/ohtu2023/part3/web-login/src/services/: user_service.py
server/assets/solutions/ohtu2023/part3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
(+1136 files in other folders)
