[tool.poetry]
name = "web-login"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.1.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
